<resources>
    <string name="app_name">Nutricion</string>
    <string name="titulo_login">Inicio de Sesión</string>
    <string name="titulo_registro">Regístrate!</string>
    <string name="DatosPersonales">Datos personales</string>
    <string name="campo_nombre">Nombre y Apellido:</string>
    <string name="campo_nombre_hint">Ingrese su nombre y apellido</string>
    <string name="campo_correo">Correo Electrónico:</string>
    <string name="campo_correo_hint">Ingrese su correo</string>
    <string name="campo_contrasena">Contraseña:</string>
    <string name="campo_contrasena_hint">Ingrese su contraseña</string>
    <string name="campo_contrasena2">Confirme su Contraseña:</string>
    <string name="campo_contrasena2_hint">Vuelva a escribir su contraseña</string>
    <string name="campo_cedula">Cedula:</string>
    <string name="campo_cedula_hint">Ingrese su número de cédula</string>
    <string name="campo_telefono">Teléfono:</string>
    <string name="campo_telefono_hint">Ingrese su número de teléfono</string>
    <string name="campo_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="campo_fecha_nacimiento_hint">Seleccione su fecha de nacimiento</string>
    <string name="profile_image">Foto de perfil</string>
    <string name="atras">Atrás</string>
    <string name="boton_registro">Registrarse</string>
    <string name="tv_go_to_register">¿No tienes cuenta? Regístrate!</string>
    <string name="titulo_editarUser">Editar Usuario</string>
    <string name="campoRol">Elija un rol:</string>
    <string name="boton_actualizar_usuario">Guardar Cambios</string>
    <string name="seleccion_nutricionista">Seleccione un Nutricionista:</string>
</resources>